# Case-Analise-Depressao

./: .gitignore  Case-Analise-Depressao.ipynb  README.md  mkdocs.yml  pyproject.toml
dados_projeto/: aula_Desafio estatística.pptx
docs/: index.md
notebooks/: Case-Analise-Depressao.ipynb
